--- a/AUTHORS
+++ b/AUTHORS
@@ -7,6 +7,8 @@
 # The email address is not required for organizations.
 
 Google LLC.
+ - Henry Chang <blueandgold> # Project Lead
+
 Spotify AB
 Square, Inc.
 ClearDATA Networks, Inc.
